<resources>
    <string name="app_name">Patins Mania</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="btn_login">Entrar</string>
    <string name="email_hint">polly@patinsmania.com</string>
    <string name="password_hint">no mínimo 6 caracteres</string>

    <string name="login_success">Logado com sucesso!</string>
    <string name="login_failed">Usuário ou senha não reconhecidos.</string>
    <string name="nav_operational">Operacional</string>
    <string name="nav_administrative">Administrativo</string>

    <string name="txt_brand">Marca</string>
    <string name="txt_model">Modelo</string>
    <string name="txt_size">Tamanho</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_submit">Enviar</string>

    <string name="list_empty">Não há itens nessa lista. Use o botão acima para adicionar.</string>
</resources>
