<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/patinsmania_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".LoginActivity"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/skate_dark"/>

    <EditText
        android:id="@+id/login_email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/email_hint"
        android:textColor="@color/skate_dark"
        android:textSize="@dimen/edt_text_size"
        android:paddingLeft="@dimen/no_padding"
        android:paddingTop="@dimen/edt_text_padding"
        android:paddingBottom="@dimen/edt_text_padding"
        android:theme="@style/EditTextTheme"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/skate_dark"/>

    <EditText
        android:id="@+id/login_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/skate_dark"
        android:textSize="@dimen/edt_text_size"
        android:paddingLeft="@dimen/no_padding"
        android:paddingTop="@dimen/edt_text_padding"
        android:paddingBottom="@dimen/edt_text_padding"
        android:theme="@style/EditTextTheme"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/btn_login"
        android:textColor="@color/skate_dark"
        android:background="@color/speed_yellow"/>


</LinearLayout>